--- a/lugang/res/layout/tab2.xml
+++ b/lugang/res/layout/tab2.xml
@@ -13,6 +13,7 @@
     
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:background="@color/white"
         android:orientation="horizontal">
         
