--- a/lugang/res/layout/activity_capture.xml
+++ b/lugang/res/layout/activity_capture.xml
@@ -28,7 +28,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
-      android:layout_marginTop="320dp"
+      android:layout_marginTop="310dp"
       android:background="@color/transparent"
       android:text="@string/msg_default_status"
       android:textColor="@color/status_text" />
@@ -40,11 +40,11 @@
       android:layout_alignParentBottom="true"
       android:background="@color/white"
       android:baselineAligned="false"
+      android:visibility="gone"
       android:orientation="vertical" >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/white"
       android:baselineAligned="false"
       android:orientation="horizontal" >
 
@@ -53,6 +53,7 @@
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:padding="5dp"
+          android:clickable="true"
           android:background="@drawable/linearlayout"
           android:orientation="vertical" >
 
@@ -60,7 +61,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="直接交付出库"
-              android:textSize="15sp"
+              android:textSize="18sp"
               android:textColor="@android:color/holo_blue_dark" />
 
           <TextView
@@ -68,18 +69,21 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
+              android:textSize="16sp"
               android:textColor="@android:color/holo_blue_dark" />
 
           <TextView
               android:id="@+id/jfCount"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:textSize="18sp"
               android:text="数量：0票" />
 
           <TextView
               android:id="@+id/jfRecords"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:textSize="18sp"
               android:text="共计0条货物记录" />
 
           <TextView
@@ -87,14 +91,18 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
+              android:textSize="16sp"
               android:textColor="@android:color/holo_red_dark" />
       </LinearLayout>
-      
+      <View android:layout_width="1dp"
+      android:layout_height="match_parent"
+      android:background="@android:color/darker_gray"/>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:padding="5dp"
+          android:clickable="true"
           android:background="@drawable/linearlayout"
           android:orientation="vertical" >
 
@@ -102,7 +110,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="中转配车出库"
-              android:textSize="15sp"
+              android:textSize="18sp"
               android:textColor="@android:color/holo_blue_dark" />
           
           <TextView
@@ -110,18 +118,21 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
+              android:textSize="16sp"
               android:textColor="@android:color/holo_blue_dark" />
 
           <TextView
               android:id="@+id/pcCount"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:textSize="18sp"
               android:text="数量：0票" />
 
           <TextView
               android:id="@+id/pcRecords"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:textSize="18sp"
               android:text="共计0条货物记录" />
 
           <TextView
@@ -129,13 +140,16 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
+              android:textSize="16sp"
               android:textColor="@android:color/holo_red_dark" />
       </LinearLayout>
   </LinearLayout>
+  <View android:layout_width="match_parent"
+      android:layout_height="1dp"
+      android:background="@android:color/darker_gray"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@drawable/linearlayout"
       android:baselineAligned="false"
       android:orientation="horizontal" >
 
@@ -150,12 +164,14 @@
               android:id="@+id/count"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:textSize="18sp"
               android:text="合计：0票" />
 
           <TextView
               android:id="@+id/record"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:textSize="18sp"
               android:text="总货物记录数：0条" />
       </LinearLayout>
       
@@ -171,6 +187,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
+              android:minHeight="1dp"
               android:text="确定出库" />
       </LinearLayout>
   </LinearLayout>
