--- a/lugang/res/drawable/linearlayout.xml
+++ b/lugang/res/drawable/linearlayout.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#FFFFFF" />
-
-	<stroke android:width="1dp" android:color="@android:color/darker_gray" />
-
-	<padding android:left="1dp" android:top="1dp" android:right="1dp" android:bottom="1dp" />
-
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:state_focused="true" android:drawable="@android:color/holo_orange_light"></item>
+    <item android:state_pressed="true" android:drawable="@android:color/holo_orange_light"></item>
+    <item android:state_selected="true" android:drawable="@android:color/holo_orange_light"></item>
+    <item android:drawable="@android:color/white"></item>
+</selector>
