--- a/lugang/res/layout/activity_capture.xml
+++ b/lugang/res/layout/activity_capture.xml
@@ -49,6 +49,7 @@
       android:orientation="horizontal" >
 
       <LinearLayout
+          android:id="@+id/jf"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
@@ -98,6 +99,7 @@
       android:layout_height="match_parent"
       android:background="@android:color/darker_gray"/>
       <LinearLayout
+          android:id="@+id/pc"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
