--- a/lugang/res/layout/tab4.xml
+++ b/lugang/res/layout/tab4.xml
@@ -27,6 +27,7 @@
         <Button
             android:id="@+id/list"
             style="@style/tabone"
+            android:visibility="gone"
             android:text="暂存跟车单" />
 
         <Button
