--- a/lugang/res/layout/activity_blank.xml
+++ b/lugang/res/layout/activity_blank.xml
@@ -265,7 +265,7 @@
                     android:layout_columnSpan="3"
                     android:ems="18"
                     android:gravity="left|center_vertical"
-                    android:inputType="number"
+                    android:inputType="textCapCharacters"
                     android:text="" />
 
                 <View style="@style/line" />
@@ -343,7 +343,7 @@
                     android:layout_columnSpan="3"
                     android:ems="18"
                     android:gravity="left|center_vertical"
-                    android:inputType="number"
+                    android:inputType="textCapCharacters"
                     android:text="" />
 
                 <View style="@style/line" />
