--- a/lugang/res/layout/activity_notice_detail.xml
+++ b/lugang/res/layout/activity_notice_detail.xml
@@ -10,27 +10,31 @@
         android:background="#33B5E5"/>
     <include layout="@layout/logo"/>
 
+    <ScrollView android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/newstitle"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_gravity="center"
             android:textColor="@android:color/holo_blue_light"
             android:textSize="20sp"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/time"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="10sp"
+            android:gravity="right"
             android:text="TextView" />
 
     </LinearLayout>
@@ -43,5 +47,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="" />
-
+	</LinearLayout>
+    </ScrollView>
 </LinearLayout>
