--- a/lugang/res/layout/activity_stuff_detail.xml
+++ b/lugang/res/layout/activity_stuff_detail.xml
@@ -76,7 +76,8 @@
         <TextView android:layout_columnSpan="3"
             android:id="@+id/cubage"
             android:layout_marginLeft="10dp"
-            android:text="0立方"/>
+            android:drawableRight="@drawable/m3"
+            android:text="0"/>
         <View style="@style/line"/>
         
         <TextView style="@style/detail"
