--- a/lugang/res/layout/notice_item.xml
+++ b/lugang/res/layout/notice_item.xml
@@ -12,17 +12,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
     
-    <TextView style="@style/header"
-        android:layout_weight="1"
+    <TextView android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
         android:id="@+id/notice"
         android:textSize="20sp"
         android:text="通知"/>
     
     
-    <TextView style="@style/header"
-        android:layout_weight="1"
+    <TextView android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
         android:id="@+id/date"
         android:text="201314 "/>
     </LinearLayout>
