--- a/lugang/res/layout/activity_order.xml
+++ b/lugang/res/layout/activity_order.xml
@@ -5,171 +5,226 @@
     android:background="@color/white"
     android:orientation="vertical" >
 
-    <include layout="@layout/header"/>
-    <View android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#33B5E5"/>
-    <include layout="@layout/logo"/>
-    
-    <RelativeLayout android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/yesno" >
+    <include layout="@layout/header" />
 
-        <LinearLayout
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#33B5E5" />
+
+    <include layout="@layout/logo" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ScrollView
+            android:id="@+id/scrollView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_above="@+id/yesno" >
 
-            <GridLayout android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:columnCount="4"
-        android:orientation="horizontal">
-        
-         <TextView android:text="基本信息"
-            android:layout_columnSpan="4"
-            android:layout_marginLeft="10dp"
-            android:textSize="15sp"
-            android:textColor="@android:color/holo_blue_dark"/>       
-                
-        <TextView
-            style="@style/detail"
-            android:text="发货码" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
-        <TextView android:text=""
-            android:id="@+id/stuffCode"
-            android:layout_columnSpan="3"
-            android:layout_marginLeft="10dp"
-            android:textSize="15sp"
-            android:textColor="@android:color/holo_blue_dark"/>
-        
-        <View style="@style/line"/>
-        
-        
-        <TextView style="@style/detail"
-            android:text="目的地"/>
-        <TextView android:layout_columnSpan="3"
-            android:id="@+id/end"
-            android:layout_width="200dp"
-            android:layout_marginLeft="10dp"
-            android:text=""/>
-        
-        <View style="@style/line"/>
-        
-        <TextView style="@style/detail"
-            android:text="承运商"/>
-        <TextView android:layout_columnSpan="3"
-            android:id="@+id/transport"
-            android:layout_width="200dp"
-            android:layout_marginLeft="10dp"
-            android:text=""/>
-        
-        <View style="@style/line"/>
-        
-    </GridLayout>
-            <GridLayout android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sureGrid"
-        android:visibility="gone"
-        android:columnCount="4"
-        android:orientation="horizontal">
-        
-         <TextView android:text="确认信息"
-            android:layout_columnSpan="4"
-            android:layout_marginLeft="10dp"
-            android:textSize="15sp"
-            android:textColor="@android:color/holo_blue_dark"/>       
-                
-        <TextView
-            style="@style/detail"
-            android:text="确认人" />
+                <GridLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:columnCount="4"
+                    android:orientation="horizontal" >
 
-        <EditText android:hint="确认人姓名"
-            android:id="@+id/sure"
-            android:layout_columnSpan="3"
-            android:layout_width="200dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/login_edittext_bg"
-            android:textSize="15sp" />
-        
-        <View style="@style/line"/>
-        
-        
-        <TextView style="@style/detail"
-            android:text="确认人电话"/>
-        <EditText android:layout_columnSpan="3"
-            android:id="@+id/surePhone"
-            android:layout_width="200dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/login_edittext_bg"
-            android:hint="确认人电话"/>
-        
-        <View style="@style/line"/>
-        
-        <TextView style="@style/detail"
-            android:layout_gravity="top"
-            android:text="意见"/>
-        <EditText android:layout_columnSpan="3"
-            android:id="@+id/suggest"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:minHeight="50dp"
-            android:gravity="top|left"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/login_edittext_bg"
-            android:hint="如不同意必须填写意见"/>
-        
-        <View style="@style/line"/>
-        
-    </GridLayout>
-            <TextView
+                    <TextView
+                        android:layout_columnSpan="4"
+                        android:layout_marginLeft="10dp"
+                        android:text="基本信息"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        style="@style/detail"
+                        android:text="发货码" />
+
+                    <TextView
+                        android:id="@+id/stuffCode"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:text=""
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:textSize="15sp" />
+
+                    <View style="@style/line" />
+
+                    <TextView
+                        style="@style/detail"
+                        android:text="目的地" />
+
+                    <TextView
+                        android:id="@+id/end"
+                        android:layout_width="200dp"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:text="" />
+
+                    <View style="@style/line" />
+
+                    <TextView
+                        style="@style/detail"
+                        android:text="承运商" />
+
+                    <TextView
+                        android:id="@+id/transport"
+                        android:layout_width="200dp"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:text="" />
+
+                    <View style="@style/line" />
+
+                </GridLayout>
+
+                <GridLayout
+                    android:id="@+id/grid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:columnCount="4"
+                    android:orientation="horizontal"
+                    android:visibility="gone" >
+                    
+                    
+                    <TextView
+                        style="@style/detail"
+                        android:text="确认人" />
+
+                    <TextView
+                        android:id="@+id/qr"
+                        android:layout_width="200dp"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:text="" />
+
+                    <View style="@style/line" />
+
+                    <TextView
+                        style="@style/detail"
+                        android:text="意见" />
+
+                    <TextView
+                        android:id="@+id/qrtext"
+                        android:layout_width="200dp"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:text="" />
+
+                    <View style="@style/line" />
+                    
+                    </GridLayout>
+
+                <GridLayout
+                    android:id="@+id/sureGrid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:columnCount="4"
+                    android:orientation="horizontal"
+                    android:visibility="gone" >
+
+                    <TextView
+                        android:layout_columnSpan="4"
+                        android:layout_marginLeft="10dp"
+                        android:text="确认信息"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        style="@style/detail"
+                        android:text="确认人" />
+
+                    <EditText
+                        android:id="@+id/sure"
+                        android:layout_width="200dp"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/login_edittext_bg"
+                        android:hint="确认人姓名"
+                        android:textSize="15sp" />
+
+                    <View style="@style/line" />
+
+                    <TextView
+                        style="@style/detail"
+                        android:text="确认人电话" />
+
+                    <EditText
+                        android:id="@+id/surePhone"
+                        android:layout_width="200dp"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/login_edittext_bg"
+                        android:hint="确认人电话" />
+
+                    <View style="@style/line" />
+
+                    <TextView
+                        style="@style/detail"
+                        android:layout_gravity="top"
+                        android:text="意见" />
+
+                    <EditText
+                        android:id="@+id/suggest"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnSpan="3"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/login_edittext_bg"
+                        android:gravity="top|left"
+                        android:hint="如不同意必须填写意见"
+                        android:minHeight="50dp" />
+
+                    <View style="@style/line" />
+                </GridLayout>
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
+                    android:text="货物信息"
                     android:textColor="@android:color/holo_blue_dark"
-                    android:textSize="15sp"
-                    android:text="货物信息" />
+                    android:textSize="15sp" />
 
-            <ListView
-                android:id="@+id/stuffList"
-                android:layout_width="match_parent"
+                <ListView
+                    android:id="@+id/stuffList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@android:color/transparent" >
+                </ListView>
+            </LinearLayout>
+        </ScrollView>
+
+        <LinearLayout
+            android:id="@+id/yesno"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:visibility="gone" >
+
+            <Button
+                android:id="@+id/yes"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:divider="@android:color/transparent" >
-            </ListView>
+                android:layout_weight="1"
+                android:text="同意托运"
+                android:textColor="@android:color/black" />
 
+            <Button
+                android:id="@+id/no"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="不同意托运"
+                android:textColor="@android:color/holo_red_dark" />
         </LinearLayout>
-    </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/yesno"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/yes"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:minHeight="1dp"
-            android:layout_weight="1"
-            android:textColor="@android:color/black"
-            android:text="同意托运" />
-
-        <Button
-            android:id="@+id/no"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:minHeight="1dp"
-            android:layout_weight="1"
-            android:textColor="@android:color/holo_red_dark"
-            android:text="不同意托运" />
-
-    </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
