--- a/lugang/res/layout/activity_login.xml
+++ b/lugang/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/login" >
+        android:layout_centerInParent="true" >
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -45,9 +45,6 @@
         android:inputType="textPassword"
         android:hint="@string/password"/>
     
-    </LinearLayout>
-    </ScrollView>
-    
     <Button
         android:id="@+id/login"
         android:layout_width="fill_parent"
@@ -55,12 +52,14 @@
         android:minHeight="1dp"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
-        android:layout_marginTop="100dp"
         android:background="@drawable/login_button_bg"
         android:textSize="18sp"
         android:textColor="@android:color/white"
-        android:layout_alignParentBottom="true"
         android:onClick="onLogin"
         android:text="@string/login" />
+    </LinearLayout>
+    </ScrollView>
+    
+    
 </RelativeLayout>
 </LinearLayout>
