入库确认，明细不能为空

--- a/lugang/res/layout/activity_bill_detail.xml
+++ b/lugang/res/layout/activity_bill_detail.xml
@@ -56,10 +56,9 @@
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_orange_light"
             android:text=""/>
-        <Button android:layout_height="30dp"
+        <Button android:layout_height="wrap_content"
+            android:minHeight="1dp"
             android:id="@+id/gdial"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:layout_marginLeft="10dp"
             android:visibility="invisible"
             android:background="@drawable/login_button_bg"
@@ -105,10 +104,9 @@
             android:layout_marginLeft="10dp"
             android:textColor="@android:color/holo_orange_light"
             android:text=""/>
-        <Button android:layout_height="30dp"
+        <Button android:layout_height="wrap_content"
+            android:minHeight="1dp"
             android:id="@+id/sdial"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:layout_marginLeft="10dp"
             android:visibility="invisible"
             android:background="@drawable/login_button_bg"
