--- a/lugang/res/layout/activity_express_detail.xml
+++ b/lugang/res/layout/activity_express_detail.xml
@@ -82,9 +82,8 @@
             android:layout_marginLeft="10dp"
             android:text=""/>
         <Button android:id="@+id/dial"
-            android:layout_height="30dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:layout_height="wrap_content"
+            android:minHeight="1dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/login_button_bg"
             android:textColor="@android:color/white"
