--- a/lugang/res/values/styles.xml
+++ b/lugang/res/values/styles.xml
@@ -116,7 +116,7 @@
         <item name="android:textSize">25sp</item>
         <item name="android:padding">2dip</item>
         <item name="android:singleLine">true</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@drawable/setting_btns</item>
     </style>
     
 
